// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "View transaction 0x12345 on Soileum (Soileum) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Soileum transaction 0x12345 | Soileum",
  },
  "title": "Soileum transaction 0x12345 | Soileum",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "canonical": undefined,
  "description": "0x12345, balances and analytics on the Soileum (Soileum) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Soileum USDT token details | Soileum",
  },
  "title": "Soileum USDT token details | Soileum",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Soileum is the #1 open-source blockchain explorer available today. 100+ chains and counting rely on Blockscout data availability, APIs, and ecosystem tools to support their networks.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "Soileum transactions - Soileum explorer | Soileum",
  },
  "title": "Soileum transactions - Soileum explorer | Soileum",
}
`;
